src/objects/VFE__c.object
<CustomObject>
    <description>Used for Public Sites that do not allow the use of apex:field for some objects</description>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>VFEs</relationshipLabel>
        <relationshipName>VFEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <label>VFE</label>
    <nameField>
        <label>VFE Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VFEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>